[gd_scene load_steps=3 format=2]

[ext_resource path="res://widgets/AnimationCanvas.tscn" type="PackedScene" id=1]
[ext_resource path="res://widgets/AnimationWidget.gd" type="Script" id=3]

[node name="AnimationWidget" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -450, -118 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="AnimationViewport" type="ViewportContainer" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 600.0

[node name="Viewport" type="Viewport" parent="VBoxContainer/AnimationViewport"]
size = Vector2( 600, 600 )
handle_input_locally = false
render_target_update_mode = 3
gui_disable_input = true

[node name="AnimationCanvas" parent="VBoxContainer/AnimationViewport/Viewport" instance=ExtResource( 1 )]
unique_name_in_owner = true

[node name="Frames" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 604.0
margin_right = 600.0
margin_bottom = 672.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Frames"]
margin_right = 23.0
margin_bottom = 68.0

[node name="New Frame" type="Button" parent="VBoxContainer/Frames/VBoxContainer"]
margin_right = 23.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "+"

[node name="Open" type="Button" parent="VBoxContainer/Frames/VBoxContainer"]
margin_top = 24.0
margin_right = 23.0
margin_bottom = 44.0
text = "O"

[node name="Save" type="Button" parent="VBoxContainer/Frames/VBoxContainer"]
margin_top = 48.0
margin_right = 23.0
margin_bottom = 68.0
text = "S"

[node name="OpenFileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 89.0
margin_top = 53.0
margin_right = -101.0
margin_bottom = -87.0
window_title = "Open File(s)"
resizable = true
dialog_text = "Open Files"
mode = 1
access = 2
filters = PoolStringArray( "*.png" )

[node name="SaveFileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 89.0
margin_top = 53.0
margin_right = -109.0
margin_bottom = -97.0
dialog_text = "Save File"
access = 2

[connection signal="pressed" from="VBoxContainer/Frames/VBoxContainer/New Frame" to="." method="_on_New_Frame_pressed"]
[connection signal="pressed" from="VBoxContainer/Frames/VBoxContainer/Open" to="." method="_on_Open_pressed"]
[connection signal="pressed" from="VBoxContainer/Frames/VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="files_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_files_selected"]
[connection signal="files_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_files_selected"]
